# fastapi-boilerplate

./: .dockerignore  Dockerfile  README.md  compose.yml  docker-compose.yml  example.http  pyproject.toml  run.sh  start.sh
.github/workflows/: test.yml
app/: cli.py  config.py  grpc.py
app/api/routes/: root.py
app/auth/: dependencies.py  routes.py
app/database/: engine.py  session.py
app/database/migrations/: README  env.py
app/database/migrations/sql/: create_auth_tables.sql
app/database/tables/: __init__.py
app/protos/: auth.proto  auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  email_pb2.py  email_pb2.pyi  email_pb2_grpc.py
app/smtp/: send.py  utils.py
app/smtp/templates/: forgot_password.html  verify_request.txt
app/tests/: __init__.py  conftest.py  mocks.py
app/tests/api/endpoints/: test_root.py
app/tests/auth/: test_forgot_password.py  test_login.py  test_logout.py  test_register.py  test_reset_password.py  test_verify.py  test_verify_request.py
app/tests/fixtures/: __init__.py
src/: .flake8  Pipfile  alembic.ini  cli.py  prestart.sh  pyproject.toml
src/app/: config.py  encoders.py  grpc.py  main.py  users.py
src/app/api/: dependencies.py  schemas.py
src/app/api/routes/: message.py
src/app/api/schemas/: user.py
src/app/auth/: dependencies.py  exceptions.py  routes.py  schemas.py
src/app/authentication/: dependencies.py  exceptions.py  oauth.py  password.py  schemas.py  services.py  utils.py
src/app/authentication/routes/: auth.py  user.py
src/app/database/: engine.py  session.py
src/app/database/migrations/: env.py
src/app/database/migrations/versions/: 20220922_110819_4bf98a9970aa_initial.py  20220922_115613_bfae377cbe59_addmessage.py  20230303_224901_82ac1c7a0a86_initial.py  20230320_094535_1d3712cab9ff_initial.py  20230407_141834_7e9e0544e733_auth_tables_pytest.py
src/app/database/tables/: __init__.py  access_token.py  accesstoken.py  base.py  message.py  user.py
src/app/email/: send.py
src/app/email/templates/: forgot_password.txt  verify_request.html
src/app/notifications/: email.py
src/app/notifications/templates/: forgot_password.html  forgot_password.txt  verify_request.html  verify_request.txt
src/protos/: auth_pb2_grpc.py  email.proto  email_pb2_grpc.py
src/tests/: conftest.py  fixtures.py  helpers.py  mocks.py
src/tests/api/endpoints/: test_forgot_password.py  test_request_verify.py  test_root.py  test_users_me.py  test_verify_request.py
src/tests/auth/: test_forgot_password.py  test_login.py  test_logout.py  test_mocked_current_user.py  test_register.py  test_reset_password.py  test_verify.py  test_verify_request.py
src/tests/fixtures/: user.py  user_type.py
src/tests/schemas/: test_message.py  test_user_create.py  test_user_read.py  test_user_update.py
