[project]
name = "app"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accentdatabase>=0.0.16",
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "fastapi[all]>=0.114.0",
    "pydantic-settings>=2.4.0",
    "sentry-sdk[fastapi]>=2.13.0",
    "typer>=0.12.5",
    "grpcio>=1.66.1",
    "protobuf>=5.28.0",
]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "httpx>=0.27.2",
    "pytest>=8.3.2",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.4",
]

[tool.black]
line-length = 88
exclude = '''
  /(
    .venv
    | migrations
    | protos
  )/
'''

[tool.ruff]
exclude = [
    ".venv",
    "migrations",
    "protos",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
