[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Stuart <stuart@accentdesign.co.uk>"]

[tool.poetry.dependencies]
python = "^3.11"
accentdatabase = "^0.0.5"
accentnotifications = {extras = ["smtp"], version = "^0.0.2"}
alembic = "^1.10.2"
asyncpg = "^0.27.0"
fastapi = {extras = ["all"], version = "^0.95.0"}
sentry-sdk = {extras = ["fastapi"], version = "^1.17.0"}
typer = {extras = ["all"], version = "^0.7.0"}
grpcio = "^1.53.0"
protobuf = "^4.22.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
httpx = "^0.23.3"
mypy = "^1.1.1"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"
ruff = "^0.0.261"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "app.database.migrations.*",
  "protos.*"
]
ignore_errors = true

[tool.black]
line-length = 88
exclude = '''
  /(
    migrations
    | protos
  )/
'''

[tool.ruff]
select = ["E", "F", "I"]
ignore = [
    "E501",  # line too long, handled by black
]
exclude = [
    "migrations",
    "protos",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
combine-as-imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
