[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Stuart <stuart@accentdesign.co.uk>"]

[tool.poetry.dependencies]
python = "^3.11"
accentdatabase = "^0.0.5"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
fastapi = {extras = ["all"], version = "^0.98.0"}
sentry-sdk = {extras = ["fastapi"], version = "^1.26.0"}
typer = {extras = ["all"], version = "^0.9.0"}
grpcio = "^1.56.0"
protobuf = "^4.23.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
httpx = "^0.24.1"
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.1"
ruff = "^0.0.275"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "app.database.migrations.*",
  "protos.*"
]
ignore_errors = true

[tool.black]
line-length = 88
exclude = '''
  /(
    migrations
    | protos
  )/
'''

[tool.ruff]
select = ["E", "F", "I"]
ignore = [
    "E501",  # line too long, handled by black
]
exclude = [
    "migrations",
    "protos",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
combine-as-imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
