[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Stuart <stuart@accentdesign.co.uk>"]

[tool.poetry.dependencies]
python = "^3.11"
accentdatabase = "*"
alembic = "*"
asyncpg = "*"
fastapi = {extras = ["all"], version = "*"}
pydantic-settings = "*"
sentry-sdk = {extras = ["fastapi"], version = "*"}
typer = {extras = ["all"], version = "*"}
grpcio = "*"
protobuf = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
httpx = "*"
mypy = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-mock = "*"
ruff = "*"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "app.database.migrations.*",
  "protos.*"
]
ignore_errors = true

[tool.black]
line-length = 88
exclude = '''
  /(
    migrations
    | protos
  )/
'''

[tool.ruff]
select = ["E", "F", "I"]
ignore = [
    "E501",  # line too long, handled by black
]
exclude = [
    "migrations",
    "protos",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
combine-as-imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
